add serach function

--- a/bio.Web.Test/app.config
+++ b/bio.Web.Test/app.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="ProductTableTest" connectionString="Provider=Microsoft.ACE.OleDb.12.0;Data Source=C:\Users\Administrator\bio\bio.Web.Test\ProductTableTest.xlsx;Extended Properties='Excel 12.0;HDR=YES'"/>
+    <add name="Product" connectionString="Provider=Microsoft.ACE.OleDb.12.0;Data Source=C:\Users\Administrator\bio\bio.Web.Test\ProductTableTest.xlsx;Extended Properties='Excel 12.0;HDR=YES'"/>
   </connectionStrings>
 </configuration>
