--- a/bio.Web/Web.config
+++ b/bio.Web/Web.config
@@ -9,5 +9,7 @@
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
-
+  <connectionStrings>
+    <add name="Product" connectionString= "Provider=Microsoft.ACE.OleDb.12.0;Data Source=C:\Users\Administrator\bio\bio.Web\Amresco2011年价目表.xls;Extended Properties='Excel 12.0;HDR=YES'"></add>
+  </connectionStrings>
 </configuration>
